force-app/main/default/objects/MC_Contactos__c/MC_Contactos__c.object-meta.xml
<CustomObject>
    <description>Prospecto sin cédula</description>
    <label>Contacto.</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contactos.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>