force-app/main/default/objects/MC_Contactos__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <formula>TEXT(Owner:User.AM_Agencia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>