force-app/main/default/objects/MC_Contactos__c/fields/MC_apellidos_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_apellidos_prospecto__c</fullName>
    <label>Apellidos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>