force-app/main/default/objects/MC_Contactos__c/fields/MC_Autoriza_tratadedatos_personales__c.field-meta.xml
<CustomField>
    <fullName>MC_Autoriza_tratadedatos_personales__c</fullName>
    <label>Autoriza tratamiento de datos personales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>