force-app/main/default/objects/MC_Contactos__c/fields/MC_Categoria__c.field-meta.xml
<CustomField>
    <fullName>MC_Categoria__c</fullName>
    <description>Si ha seleccionado en la fuente de prospección &quot;Actividades comerciales&quot;,&quot;Medios tradicionales&quot; o &quot;Medios digitales&quot; , seleccione la categoría de acuerdo a la fuente..</description>
    <inlineHelpText>Si ha seleccionado en la fuente de prospección &quot;Actividades comerciales&quot;,&quot;Medios tradicionales&quot; o &quot;Medios digitales&quot; , seleccione la categoría de acuerdo a la fuente..</inlineHelpText>
    <label>Categoría Fuente de prospección</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MC_fuente_prospecto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Playa de ventas</fullName>
            </value>
            <value>
                <fullName>Nuevos</fullName>
            </value>
            <value>
                <fullName>Colegios/Universidades</fullName>
            </value>
            <value>
                <fullName>Relacionamiento</fullName>
            </value>
            <value>
                <fullName>Financiero</fullName>
            </value>
            <value>
                <fullName>Sector económico</fullName>
            </value>
            <value>
                <fullName>Usados</fullName>
            </value>
            <value>
                <fullName>Cuña radio</fullName>
            </value>
            <value>
                <fullName>Comercial de T.V</fullName>
            </value>
            <value>
                <fullName>Valla</fullName>
            </value>
            <value>
                <fullName>Inserto prensa o revista</fullName>
            </value>
            <value>
                <fullName>Correo directo</fullName>
            </value>
            <value>
                <fullName>Volantes</fullName>
            </value>
            <value>
                <fullName>Directorio telefónico</fullName>
            </value>
            <value>
                <fullName>Página web</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Sitios externos</fullName>
            </value>
            <value>
                <fullName>--Ninguno--</fullName>
            </value>
            <value>
                <fullName>Línea #470</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>