force-app/main/default/objects/MC_Contactos__c/fields/MC_celular_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_celular_prospecto__c</fullName>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>