force-app/main/default/objects/MC_Contactos__c/fields/MC_ciudad_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_ciudad_prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Contactos.</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>