force-app/main/default/objects/MC_Contactos__c/fields/MC_correo_electronico_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_correo_electronico_prospecto__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>