force-app/main/default/objects/MC_Contactos__c/fields/MC_cuenta_relacionada_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_cuenta_relacionada_prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta convertida</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contactos.</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>