force-app/main/default/objects/MC_Contactos__c/fields/MC_cuenta_relacionada_SI_No__c.field-meta.xml
<CustomField>
    <fullName>MC_cuenta_relacionada_SI_No__c</fullName>
    <formula>MC_cuenta_relacionada_prospecto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta relacionada SI/No</label>
    <type>Text</type>
</CustomField>