force-app/main/default/objects/MC_Contactos__c/fields/MC_estado_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_estado_prospecto__c</fullName>
    <defaultValue>&quot;En seguimiento&quot;</defaultValue>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En seguimiento</fullName>
            </value>
            <value>
                <fullName>Convertido a cuenta</fullName>
                <label>Cuenta ya existe</label>
            </value>
            <value>
                <fullName>Sin interes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>