force-app/main/default/objects/MC_Contactos__c/fields/MC_Fecha_ultimo_contacto__c.field-meta.xml
<CustomField>
    <fullName>MC_Fecha_ultimo_contacto__c</fullName>
    <label>Fecha último contacto</label>
    <type>Date</type>
</CustomField>