force-app/main/default/objects/MC_Contactos__c/fields/MC_fuente_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_fuente_prospecto__c</fullName>
    <label>Fuente de prospección</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actividades comerciales</fullName>
            </value>
            <value>
                <fullName>Cliente de taller</fullName>
            </value>
            <value>
                <fullName>Página Web</fullName>
                <label>Medios digitales</label>
            </value>
            <value>
                <fullName>Referidos</fullName>
            </value>
            <value>
                <fullName>Visita corporativa</fullName>
            </value>
            <value>
                <fullName>Medios</fullName>
                <label>Medios tradicionales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>