force-app/main/default/objects/MC_Contactos__c/fields/MC_motivo_de_rechazo_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_motivo_de_rechazo_prospecto__c</fullName>
    <label>Razón de no interés</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MC_estado_prospecto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>No contactable</fullName>
            </value>
            <value>
                <fullName>Número equivocado</fullName>
            </value>
            <value>
                <fullName>No interesado por precio</fullName>
            </value>
            <value>
                <fullName>No interesado por diseño</fullName>
            </value>
            <value>
                <fullName>No interesado por servicio</fullName>
            </value>
            <value>
                <fullName>No interesado por marca</fullName>
            </value>
            <value>
                <fullName>No interesado por capacidad de pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>