force-app/main/default/objects/MC_Contactos__c/fields/MC_nivel_de_interes_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_nivel_de_interes_prospecto__c</fullName>
    <defaultValue>&quot;Alto&quot;</defaultValue>
    <label>Nivel de interes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MC_estado_prospecto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>