force-app/main/default/objects/MC_Contactos__c/fields/MC_nombres_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_nombres_prospecto__c</fullName>
    <label>Nombres</label>
    <length>100</length>
    <type>Text</type>
</CustomField>