force-app/main/default/objects/MC_Contactos__c/fields/MC_numero_de_documento_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_numero_de_documento_prospecto__c</fullName>
    <label>Número de documento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>