force-app/main/default/objects/MC_Contactos__c/fields/MC_telefono_fijo_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_telefono_fijo_prospecto__c</fullName>
    <label>Teléfono fijo</label>
    <type>Phone</type>
</CustomField>