force-app/main/default/objects/MC_Contactos__c/fields/MC_Tipo_de_cotizacion_contactos__c.field-meta.xml
<CustomField>
    <fullName>MC_Tipo_de_cotizacion_contactos__c</fullName>
    <label>Tipo de cotizacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevos</fullName>
            </value>
            <value>
                <fullName>Usados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>