force-app/main/default/objects/MC_Contactos__c/fields/MC_tipo_de_documento_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_tipo_de_documento_prospecto__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cédula de ciudadanía</fullName>
            </value>
            <value>
                <fullName>NIT</fullName>
            </value>
            <value>
                <fullName>NUIP</fullName>
            </value>
            <value>
                <fullName>Tarjeta de identidad</fullName>
            </value>
            <value>
                <fullName>Cédula de extranjería</fullName>
            </value>
            <value>
                <fullName>Tarjeta de extranjería</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>