force-app/main/default/objects/MC_Contactos__c/fields/MC_tipo_de_pago_lead_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_tipo_de_pago_lead_prospecto__c</fullName>
    <label>Tipo de pago lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>