force-app/main/default/objects/MC_Contactos__c/fields/MC_tratamiento_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_tratamiento_prospecto__c</fullName>
    <label>Tratamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>Sra.</fullName>
            </value>
            <value>
                <fullName>No especificado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>