force-app/main/default/objects/MC_Contactos__c/fields/MC_Ultimo_comentaro__c.field-meta.xml
<CustomField>
    <fullName>MC_Ultimo_comentaro__c</fullName>
    <label>Último comentario</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>