force-app/main/default/objects/MC_Contactos__c/fields/MC_Vehiculo_contactos__c.field-meta.xml
<CustomField>
    <fullName>MC_Vehiculo_contactos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehículo de interés</label>
    <referenceTo>AM_Producto__c</referenceTo>
    <relationshipLabel>Contactos.</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>