force-app/main/default/objects/MC_Contactos__c/fields/MC_vehiculo_interes_prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_vehiculo_interes_prospecto__c</fullName>
    <label>Descripción del usado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>