force-app/main/default/objects/MC_Contactos__c/fields/MC_Vitrina_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>MC_Vitrina_Prospecto__c</fullName>
    <formula>TEXT(Owner:User.AM_Concesionario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vitrina</label>
    <type>Text</type>
</CustomField>