force-app/main/default/objects/MC_Contactos__c/fields/SO_Email_de_referidor__c.field-meta.xml
<CustomField>
    <fullName>SO_Email_de_referidor__c</fullName>
    <formula>SO_Referidor__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email de referidor</label>
    <type>Text</type>
</CustomField>