force-app/main/default/objects/MC_Contactos__c/fields/SO_No_recibir_correos_electronico_Referi__c.field-meta.xml
<CustomField>
    <fullName>SO_No_recibir_correos_electronico_Referi__c</fullName>
    <formula>SO_Referidor__r.PersonContact.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No recibir correos electrónicos</label>
    <type>Checkbox</type>
</CustomField>