force-app/main/default/objects/MC_Contactos__c/fields/SO_No_recibir_SMS_Referidor__c.field-meta.xml
<CustomField>
    <fullName>SO_No_recibir_SMS_Referidor__c</fullName>
    <formula>SO_Referidor__r.PersonContact.AM_No_recibir_SMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No recibir SMS</label>
    <type>Checkbox</type>
</CustomField>