force-app/main/default/objects/MC_Contactos__c/fields/SO_Nombre_completo__c.field-meta.xml
<CustomField>
    <fullName>SO_Nombre_completo__c</fullName>
    <formula>IF( RecordType.Name  = &quot;Contacto persona Jurídica&quot;,  Name ,   Name   &amp; &quot; &quot;  &amp; MC_apellidos_prospecto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre completo</label>
    <type>Text</type>
</CustomField>