force-app/main/default/objects/MC_Contactos__c/fields/SO_Numero_de_identificacion_referidor__c.field-meta.xml
<CustomField>
    <fullName>SO_Numero_de_identificacion_referidor__c</fullName>
    <formula>SO_Referidor__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de identificación referidor</label>
    <type>Text</type>
</CustomField>