force-app/main/default/objects/MC_Contactos__c/fields/SO_Numero_documento_cuenta_convertida__c.field-meta.xml
<CustomField>
    <fullName>SO_Numero_documento_cuenta_convertida__c</fullName>
    <formula>MC_cuenta_relacionada_prospecto__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero documento cuenta convertida</label>
    <type>Text</type>
</CustomField>