force-app/main/default/objects/MC_Contactos__c/fields/SO_Referidor__c.field-meta.xml
<CustomField>
    <fullName>SO_Referidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contactos. (Referidor)</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>