force-app/main/default/objects/MC_Contactos__c/fields/SO_Telefono_Referidor__c.field-meta.xml
<CustomField>
    <fullName>SO_Telefono_Referidor__c</fullName>
    <formula>IF (
NOT(ISBLANK( SO_Referidor__r.Phone)), SO_Referidor__r.Phone, SO_Referidor__r.Fax
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono Referidor</label>
    <type>Text</type>
</CustomField>