force-app/main/default/objects/MC_Contactos__c/fields/SO_Tipo_de_cliente_Referidor__c.field-meta.xml
<CustomField>
    <fullName>SO_Tipo_de_cliente_Referidor__c</fullName>
    <formula>TEXT( SO_Referidor__r.AM_Tipo_de_usuario__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de cliente Referidor</label>
    <type>Text</type>
</CustomField>