force-app/main/default/objects/MC_Contactos__c/recordTypes/Contacto_persona_Jur_dica.recordType-meta.xml
<RecordType>
    <fullName>Contacto_persona_Jur_dica</fullName>
    <active>true</active>
    <label>Contacto persona Jurídica</label>
</RecordType>