force-app/main/default/objects/MC_Contactos__c/recordTypes/Contacto_persona_Natural.recordType-meta.xml
<RecordType>
    <fullName>Contacto_persona_Natural</fullName>
    <active>true</active>
    <label>Contacto persona Natural</label>
</RecordType>