force-app/main/default/objects/MC_Contactos__c/validationRules/SO_RV_CON_003.validationRule-meta.xml
<ValidationRule>
    <fullName>SO_RV_CON_003</fullName>
    <active>false</active>
    <description>Si la fuente de prospección fue REFERIDO, debe diligenciar los datos del REFERIDOR.
SO_RV_CON_003</description>
    <errorConditionFormula>AND(
TEXT( MC_fuente_prospecto__c ) = &quot;Referidos&quot;,

AND(
ISBLANK( SO_Referidor__c )
))</errorConditionFormula>
    <errorMessage>Si la fuente de prospección fue REFERIDO, debe diligenciar los datos del REFERIDOR.
SO_RV_CON_003</errorMessage>
</ValidationRule>